--- a/livinglotsla/static/bower.json
+++ b/livinglotsla/static/bower.json
@@ -15,7 +15,6 @@
   ],
   "dependencies": {
     "bootstrap": "~3.0.0",
-    "jquery": "~2.0.3",
     "fancybox": "~2.1.5",
     "leaflet.usermarker": "git://github.com/heyman/leaflet-usermarker.git#master",
     "normalize-css": "~2.1.3",
@@ -34,7 +33,8 @@
     "leaflet-tilelayer-vector": "https://github.com/ebrelsford/leaflet-tilelayer-vector.git#master",
     "select2": "~3.4.5",
     "leaflet.loading": "~0.1.4",
-    "requirejs-text": "~2.0.10"
+    "requirejs-text": "~2.0.10",
+    "jQuery": "~2.1.0"
   },
   "resolutions": {
     "leaflet": "e-tag:08329f89f"
