Bower project name

--- a/livinglotsla/static/bower.json
+++ b/livinglotsla/static/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{ project_name }}",
+  "name": "livinglots-la",
   "version": "0.0.0",
   "authors": [
     "Eric Brelsford <ebrelsford@gmail.com>"
