--- a/livinglotsla/static/bower.json
+++ b/livinglotsla/static/bower.json
@@ -31,9 +31,10 @@
     "leaflet-plugins": "https://github.com/shramov/leaflet-plugins.git#master",
     "leaflet-tilelayer-vector": "https://github.com/ebrelsford/leaflet-tilelayer-vector.git#master",
     "select2": "~3.4.5",
-    "leaflet.loading": "~0.1.4",
+    "leaflet.loading": "0.1.11",
     "requirejs-text": "~2.0.10",
-    "jQuery": "~2.1.0"
+    "jQuery": "~2.1.0",
+    "cartodb.js": "3.8.03"
   },
   "resolutions": {
     "leaflet": "e-tag:08329f89f"
