--- a/livinglotsla/static/bower.json
+++ b/livinglotsla/static/bower.json
@@ -35,7 +35,8 @@
     "jQuery": "~2.1.0",
     "cartodb.js": "3.8.03",
     "nouislider": "~6.0.0",
-    "jquery-form": "~3.46.0"
+    "jquery-form": "~3.46.0",
+    "perfect-scrollbar": "~0.4.9"
   },
   "resolutions": {
     "leaflet": "e-tag:08329f89f"
