--- a/livinglotsla/static/bower.json
+++ b/livinglotsla/static/bower.json
@@ -36,7 +36,8 @@
     "cartodb.js": "3.8.03",
     "nouislider": "~6.0.0",
     "jquery-form": "~3.46.0",
-    "perfect-scrollbar": "~0.4.9"
+    "perfect-scrollbar": "~0.4.9",
+    "livinglots-map": "https://github.com/596acres/livinglots-map.git#0.1.0"
   },
   "resolutions": {
     "leaflet": "e-tag:08329f89f"
